--- a/src/css/header.css
+++ b/src/css/header.css
@@ -99,7 +99,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding-top: 32px;
+  padding-top: 50px;
   padding-bottom: 64px;
 }
 
